---
source: crates/pcb-zen/tests/input.rs
expression: snapshot_output
---
(export (version "E")
  (design
    (source "unknown")
    (date "")
    (tool "pcb"))
  (components
  )
  (libparts
  )
  (nets
    (net (code "1") (name "SIG_signal")
    )
  )
)
Error: Input 'signal' (type) has wrong type for this placeholder: expected Net, got SingleNet(signal=SIG_signal)
   ╭─[ [TEMP_DIR]child.zen:2:10 ]
   │
 2 │ signal = io("signal", Net)
   │          ────────┬────────  
   │                  ╰────────── Input 'signal' (type) has wrong type for this placeholder: expected Net, got SingleNet(signal=SIG_signal)
   │
   ├─[ [TEMP_DIR]parent.zen:8:1 ]
   │
 8 │ Child(name="child1", signal=sig_if)  # Should fail - interface not accepted for Net io
   │ ─────────────────┬─────────────────  
   │                  ╰─────────────────── Error instantiating `child`
───╯

Advice: Net name 'SIG_signal' should be UPPERCASE: 'SIG_SIGNAL'
   ╭─[ [TEMP_DIR]parent.zen:5:10 ]
 5 │sig_if = SingleNet("SIG")
   │                 ╰──────── Net name 'SIG_signal' should be UPPERCASE: 'SIG_SIGNAL'
